# agenttrace

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  SPECIFICATION.md  docker-compose.yml  init-project.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/agenttrace-core/: Cargo.toml
crates/agenttrace-core/src/: config.rs  error.rs  lib.rs  main.rs
crates/agenttrace-core/src/alerting/: evaluator.rs  mod.rs  notifier.rs  repository.rs
crates/agenttrace-core/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs
crates/agenttrace-core/src/collector/: cost.rs  grpc.rs  mod.rs  pipeline.rs
crates/agenttrace-core/src/db/: mod.rs  postgres.rs  redis.rs
crates/agenttrace-core/src/models/: alert.rs  metrics.rs  mod.rs  query.rs  span.rs  trace.rs
crates/agenttrace-core/src/tui/: app.rs  components.rs  event.rs  mod.rs  ui.rs
dashboard/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/src/app/alerts/: page.tsx
dashboard/src/app/costs/: page.tsx
dashboard/src/app/metrics/: page.tsx
dashboard/src/app/search/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/traces/: page.tsx
dashboard/src/app/traces/[traceId]/: page.tsx
dashboard/src/components/: CostBreakdown.tsx  LiveIndicator.tsx  Navbar.tsx  SpanDetail.tsx  SpanIcon.tsx  TraceList.tsx  TraceWaterfall.tsx
dashboard/src/hooks/: useSpans.ts  useStream.ts
dashboard/src/lib/: api.ts  utils.ts
dashboard/src/types/: index.ts
docker/: Dockerfile.collector
examples/: README.md  basic_usage.py
ios/: README.md
ios/AgentTrace/: generate-project.sh  project.yml
ios/AgentTrace/AgentTrace/: Info.plist
ios/AgentTrace/AgentTrace.xcodeproj/: project.pbxproj
ios/AgentTrace/AgentTrace.xcodeproj/project.xcworkspace/xcuserdata/stevenelliottjr.xcuserdatad/: UserInterfaceState.xcuserstate
ios/AgentTrace/AgentTrace.xcodeproj/xcshareddata/xcschemes/: AgentTrace.xcscheme
ios/AgentTrace/AgentTrace/App/: AgentTraceApp.swift
ios/AgentTrace/AgentTrace/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/AgentTrace/AgentTrace/Core/: DependencyContainer.swift
ios/AgentTrace/AgentTrace/Core/Extensions/: Color+AgentTrace.swift  Date+Formatting.swift
ios/AgentTrace/AgentTrace/Features/Alerts/: AlertsView.swift
ios/AgentTrace/AgentTrace/Features/Dashboard/: DashboardView.swift  DashboardViewModel.swift
ios/AgentTrace/AgentTrace/Features/Metrics/: MetricsView.swift
ios/AgentTrace/AgentTrace/Features/Metrics/Charts/: CostBreakdownChart.swift  ErrorRateChart.swift  LatencyChart.swift  TokenUsageChart.swift
ios/AgentTrace/AgentTrace/Features/Settings/: SettingsView.swift
ios/AgentTrace/AgentTrace/Features/Traces/: TraceDetailView.swift  TraceListView.swift  TraceWaterfallView.swift
ios/AgentTrace/AgentTrace/Models/DTOs/: APIResponses.swift
ios/AgentTrace/AgentTrace/Models/Domain/: Alert.swift  Metrics.swift  Span.swift  Trace.swift
ios/AgentTrace/AgentTrace/Models/SwiftData/: CachedModels.swift
ios/AgentTrace/AgentTrace/Services/Networking/: APIClient.swift  Endpoint.swift  SSEClient.swift
ios/AgentTrace/AgentTrace/Services/Persistence/: SwiftDataManager.swift
ios/AgentTrace/AgentTraceLiveActivity/: AgentSessionActivity.swift  AgentTraceLiveActivity.entitlements  Info.plist
ios/AgentTrace/AgentTraceWidgets/: Info.plist  MetricsSummaryWidget.swift
ios/AgentTrace/Shared/: AppGroupStorage.swift  DeepLinking.swift
migrations/: 001_initial_schema.sql  002_alerting.sql
proto/: agenttrace.proto
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: anthropic_tracing.py  basic_usage.py  langchain_tracing.py
sdk/python/src/agenttrace/: __init__.py  client.py  models.py
sdk/python/src/agenttrace/context/: __init__.py
sdk/python/src/agenttrace/exporters/: __init__.py  base.py  console.py  http.py
sdk/python/src/agenttrace/integrations/: __init__.py  anthropic.py  langchain.py  litellm.py  openai.py
sdk/python/tests/: __init__.py  test_client.py  test_models.py
