[package]
name = "agenttrace"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Observability platform for AI agents"
license = "Apache-2.0"
repository = "https://github.com/yourusername/agenttrace"
readme = "../../README.md"
keywords = ["observability", "tracing", "ai", "agents", "llm"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[lib]
name = "agenttrace"
path = "src/lib.rs"

[[bin]]
name = "agenttrace"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", features = ["chrono"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
]}
deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# gRPC (for OTLP compatibility)
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# TUI
ratatui = { version = "0.26", features = ["all-widgets"] }
crossterm = { version = "0.27", features = ["event-stream"] }
tui-textarea = "0.4"

# CLI
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.4"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Observability (for self-monitoring)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.10"
url = "2.5"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

# Configuration
config = "0.14"
dotenvy = "0.15"
directories = "5.0"

# HTTP client (for webhooks, notifications)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Time utilities
humantime = "2.1"
humantime-serde = "1.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
fake = { version = "2.9", features = ["chrono"] }
testcontainers = "0.15"
wiremock = "0.5"
rstest = "0.18"
pretty_assertions = "1.4"
tempfile = "3.9"
proptest = "1.4"

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["tui"]
tui = []
full = ["tui"]

# Profile settings are in workspace root Cargo.toml

# Benchmarks will be added later
# [[bench]]
# name = "collector"
# harness = false
