[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttrace"
version = "0.1.0"
description = "Observability SDK for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AgentTrace Contributors" }
]
keywords = ["ai", "agents", "observability", "tracing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.10.0"]
langchain = ["langchain>=0.1.0"]
all = [
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "langchain>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/stevenelliottjr/agenttrace"
Documentation = "https://github.com/stevenelliottjr/agenttrace#readme"
Repository = "https://github.com/stevenelliottjr/agenttrace"
Issues = "https://github.com/stevenelliottjr/agenttrace/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttrace"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
